# PlayingCardsPlus

./: LICENSE  README.md  custom_error.py  deck.py  pyproject.toml  test.py
MultiplayerGames/: dynamite.py  primitives.py
src/playingcardsplus/: __init__.py  card.py  custom_error.py  dealer.py  deck.py  utils.py
src/playingcardsplus/MultiplayerGames/: MultiplayerGames.md  data.py  dealer.py  deck.py  game.py  instructions.py  player.py  rules.py
src/playingcardsplus/MultiplayerGames/games/: dynamite.py  texas_holdem.py
tests/: test_dealer.py  test_decks.py  test_game.py  test_rules.py
