[project]
name = "playingcardsplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kevin Kim", username = "TheRealDataMonster", email = "kevinkim1207@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
